tests/NormalTests/paczka1/fuzzy1/43597432.err
Error in line 2: e06 A621 61,3
Error in line 9: e06 S487 268,5
Error in line 23: taZSqZLw S276 87,0
Error in line 29: e06 S276 63,24
Error in line 27: e06 A621 24,8
Error in line 16: qoV8ijYvg S117 40,5
Error in line 35: S276 S117 73,4
